--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "react-tsparticles": "^2.12.2",
     "yarn": "^1.22.22"
   },
   "scripts": {
