--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "react-starfield": "^1.0.3",
     "react-tsparticles": "^2.12.2",
     "yarn": "^1.22.22"
   },
