--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "framer-motion": "^11.15.0",
     "orbit-space": "^1.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
