--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "^5.0.1",
     "react-starfield": "^1.0.3",
     "react-tsparticles": "^2.12.2",
+    "react-typed": "^2.0.12",
     "yarn": "^1.22.22"
   },
   "scripts": {
